# AI-Powered-Feedback-System

./: .env.example  .gitignore  Dockerfile  Dockerfile.dashboard  README.md  docker-compose.yml  feedback.db  pyproject.toml  test_feedback.csv  test_negative_spike.csv  test_urgent.csv  test_very_negative.csv
.github/prompts/: plan-feedbackSystemRebuild.prompt.md
app/: database.py  main.py  models.py  schemas.py
app/api/: routes.py
app/services/: alerts.py  categorizer.py  category_model.py  ingestion.py  llm_service.py  priority.py  processing.py  report_generator.py  scheduler.py  sentiment.py  sentiment_model.py  trend_analysis.py
app/services/scrapers/: app_store_scraper.py  play_store.py  web_scraper.py
dashboard/: Home.py  requirements.txt
dashboard/pages/: 1_Analytics.py  2_Feedback_Browser.py  3_Trends.py  4_Sources.py  5_Reports.py
dashboard/utils/: api_client.py
deployment/: README.md
screenshots/: README.md
static/: app.js  config.js  index.html  styles.css
tests/: test_processing.py  test_routes.py  test_trend_analysis.py
