[project]
name = "feedback-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.129.2",
    "numpy<2",
    "pandas<3",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "ruff>=0.15.2",
    "textblob>=0.19.0",
    "torch==2.0.1",
    "tortoise-orm>=1.1.5",
    "transformers==4.30.0",
    "uvicorn>=0.41.0",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
